--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <h3 class="job">
                         Hi, Welcome to My Personal Website</h3>
                         <h4 class="holo"><span class="coloring">I'am</span></h4>
-                        <h3 class="name">Mizwar <span class="coloring">Haris</span></h3>
+                        <h3 class="name">Pendi <span class="coloring">Rosadi</span></h3>
                         <h3 class="job">
                             <span class="cd-headline rotate-1">
                                 <span class="blc">Creative</span>
