--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                         </div>
                         <div class="right">
                             <div class="short">
-                                <h3 class="name">M.Mizwar<span class="coloring">Haris</span></h3>
+                                <h3 class="name">Pendi<span class="coloring">Rosadi</span></h3>
                                 <h3 class="job">
                                     <span class="cd-headline rotate-1">
                                         <span class="blc">Creative</span>
@@ -168,7 +168,7 @@
                                 </h3>
                             </div>
                             <div class="text">
-                                <p>My name is <span>M.Mizwar Haris.</span> I am a graphic designer,Photography,
+                                <p>My name is <span>Pendi Rosadi.</span> I am a graphic designer,Photography,
                                     Videography and I'm very passionate and dedicated to my work. With my
                                     experience as a professional, I have acquired the skills and knowledge. It was nice
                                     to meet you. Have a nice day! May Allah bless you.</p>
@@ -187,7 +187,7 @@
                                                     <div class="main" data-img-url="img/about/1.jpg"></div>
                                                 </div>
                                                 <div class="short">
-                                                    <h3 class="name">M.Mizwar <span class="coloring">Haris</span></h3>
+                                                    <h3 class="name">Pendi <span class="coloring">Rosadi</span></h3>
                                                     <h3 class="job">
                                                         <span class="cd-headline rotate-1">
                                                             <span class="blc">Creative</span>
@@ -205,7 +205,7 @@
                                                     <li>
                                                         <div class="list_inner">
                                                             <i class="icon-user"></i>
-                                                            <span>M.Mizwar Haris</span>
+                                                            <span>Pendi Rosadi</span>
                                                         </div>
                                                     </li>
                                                     <li>
