--- a/index.html
+++ b/index.html
@@ -158,11 +158,9 @@
                                 <h3 class="name">Pendi<span class="coloring">Rosadi</span></h3>
                                 <h3 class="job">
                                     <span class="cd-headline rotate-1">
-                                        <span class="blc">Creative</span>
+                                        <span class="blc">ENGLISH</span>
                                         <span class="cd-words-wrapper">
-                                            <b class="is-visible">Designer</b>
-                                            <b>Fotography</b>
-                                            <b>Videography</b>
+                                            <b class="is-visible">TEACHER</b>
                                         </span>
                                     </span>
                                 </h3>
