--- a/index.html
+++ b/index.html
@@ -128,11 +128,9 @@
                         <h3 class="name">Pendi <span class="coloring">Rosadi</span></h3>
                         <h3 class="job">
                             <span class="cd-headline rotate-1">
-                                <span class="blc">Creative</span>
+                                <span class="blc">English</span>
                                 <span class="cd-words-wrapper">
-                                    <b>Designer</b>
-                                    <b>Fotography</b>
-                                    <b class="is-visible">Videography</b>
+                                    <b class="is-visible">Teacher</b>
                                 </span>
                             </span>
                         </h3>
