--- a/index.html
+++ b/index.html
@@ -164,10 +164,8 @@
                                 </h3>
                             </div>
                             <div class="text">
-                                <p>My name is <span>Pendi Rosadi.</span> I am a graphic designer,Photography,
-                                    Videography and I'm very passionate and dedicated to my work. With my
-                                    experience as a professional, I have acquired the skills and knowledge. It was nice
-                                    to meet you. Have a nice day! May Allah bless you.</p>
+                                <p>My name is <span>Pendi Rosadi.</span> I am professional teacher and tutor english course in Glace Laerning center.
+                                    I was graduateting at University of Mataram.</p>
                             </div>
                             <div class="edrea_tm_button">
                                 <a href="#">Know More</a>
