--- a/index.html
+++ b/index.html
@@ -184,11 +184,9 @@
                                                     <h3 class="name">Pendi <span class="coloring">Rosadi</span></h3>
                                                     <h3 class="job">
                                                         <span class="cd-headline rotate-1">
-                                                            <span class="blc">Creative</span>
+                                                            <span class="blc">English</span>
                                                             <span class="cd-words-wrapper">
-                                                                <b>Designer</b>
-                                                                <b>Fotography</b>
-                                                                <b class="is-visible">Videography</b>
+                                                                <b class="is-visible">Teacher</b>
                                                             </span>
                                                         </span>
                                                     </h3>
@@ -234,11 +232,9 @@
                                                     <h3><span>About <span class="coloring">Me</span></span></h3>
                                                 </div>
                                                 <div class="text">
-                                                    <p>Hello everybody! My name is <span>M.Mizwar Haris.</span> I am a
-                                                        graphic designer, Fotography, Videography and I'm very
-                                                        passionate and dedicated to my work. With my experience as a
-                                                        professional, I have acquired the skills and knowledge. It was
-                                                        nice to meet you. Have a nice day! May Allah bless you.</p>
+                                                    <p>Hello everybody! My name is <span>Pendi Rosadi.</span> I am a professional teacher and English tutor, 
+                                                        and I am very passionate and dedicated to my work. Through my experience as a professional, 
+                                                        I have acquired skills and knowledge. Nice to meet you. Have a great day! May Allah bless you.</p>
                                                 </div>
                                             </div>
                                             <div class="service">
@@ -247,12 +243,10 @@
                                                 </div>
                                                 <div class="list">
                                                     <ul>
-                                                        <li><i class="icon-right-dir"></i>Graphic Design</li>
-                                                        <li><i class="icon-right-dir"></i>App Development</li>
-                                                        <li><i class="icon-right-dir"></i>Digital Experience</li>
-                                                        <li><i class="icon-right-dir"></i>Chat Bot</li>
-                                                        <li><i class="icon-right-dir"></i>Social Media Design</li>
-                                                        <li><i class="icon-right-dir"></i>Web Automation</li>
+                                                        <li><i class="icon-right-dir"></i>Thesis consultant</li>
+                                                        <li><i class="icon-right-dir"></i>English Language Course</li>
+                                                        <li><i class="icon-right-dir"></i>Tutor TOEFL</li>
+                                                        <li><i class="icon-right-dir"></i>Sincetific Paper Consultant</li>
                                                     </ul>
                                                 </div>
                                             </div>
@@ -262,16 +256,7 @@
                                                 </div>
                                                 <div class="oki_progress">
                                                     <div class="progress_inner" data-value="90">
-                                                        <span><span class="label">Graphic Design</span><span
-                                                                class="number">90%</span></span>
-                                                        <div class="background">
-                                                            <div class="bar">
-                                                                <div class="bar_in"></div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="progress_inner" data-value="90">
-                                                        <span><span class="label">Programing</span><span
+                                                        <span><span class="label">Perofesional MS Office</span><span
                                                                 class="number">90%</span></span>
                                                         <div class="background">
                                                             <div class="bar">
@@ -307,14 +292,14 @@
                                                     <ul>
                                                         <li>
                                                             <div class="list_inner">
-                                                                <div class="myCircle" data-value="0.75"></div>
+                                                                <div class="myCircle" data-value="0.95"></div>
                                                                 <div class="title"><span>English</span></div>
                                                             </div>
                                                         </li>
                                                         <li>
                                                             <div class="list_inner">
                                                                 <div class="myCircle" data-value="0.9"></div>
-                                                                <div class="title"><span>Arabic</span></div>
+                                                                <div class="title"><span>Indonesia</span></div>
                                                             </div>
                                                         </li>
                                                     </ul>
@@ -330,22 +315,22 @@
                                                         <li>
                                                             <div class="list_inner">
                                                                 <div class="time">
-                                                                    <span>2021 - new</span>
+                                                                    <span>2019 - 2022</span>
                                                                 </div>
                                                                 <div class="place">
-                                                                    <h3>BUMIGORA UNIVERSITY</h3>
-                                                                    <span>Visual Communication Design</span>
+                                                                    <h3>University Of Mataram</h3>
+                                                                    <span>S1 Bechelor's Degree</span>
                                                                 </div>
                                                             </div>
                                                         </li>
                                                         <li>
                                                             <div class="list_inner">
                                                                 <div class="time">
-                                                                    <span>2017 - 2020</span>
+                                                                    <span>2023 - 2025</span>
                                                                 </div>
                                                                 <div class="place">
-                                                                    <h3>SMA Negeri 1 Sakra</h3>
-                                                                    <span>Senior High School</span>
+                                                                    <h3>University Of Mataram</h3>
+                                                                    <span>Magister</span>
                                                                 </div>
                                                             </div>
                                                         </li>
