--- a/index.html
+++ b/index.html
@@ -428,23 +428,6 @@
                                                                 </div>
                                                             </div>
                                                         </li>
-                                                        <li>
-                                                            <div class="list_inner">
-                                                                <div class="text">
-                                                                    <i class="icon-quote-left"></i>
-                                                                    <p>Jangan melihat ke luar. Lihatlah ke dalam diri sendiri dan carilah itu.</p>
-                                                                </div>
-                                                                <div class="details">
-                                                                    <div class="image">
-                                                                        <div class="main"
-                                                                            data-img-url="img/testimonials/0.jpg"></div>
-                                                                    </div>
-                                                                    <div class="info">
-                                                                        <h3>Jalaludin Rumi</h3>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </li>
                                                     </ul>
                                                 </div>
                                             </div>
@@ -464,7 +447,6 @@
                     <div class="edrea_tm_portfolio swiper-section">
                         <div class="edrea_tm_main_title">
                             <h3>Random <span class="coloring">Gallery</span></h3>
-                            <p>This random gallery was taken using Samsung S22 Ultra</p>
                         </div>
                         <div class="portfolio_list gallery_zoom">
                             <div class="swiper-container">
@@ -932,7 +914,7 @@
                                         <div class="list_inner">
                                             <i class="icon-mail-1"></i>
                                             <span><a
-                                                    href="mizwarharis.my.id">mizwarharis.my.id</a></span>
+                                                    href="pendii.my.id">pendii.my.id</a></span>
                                         </div>
                                     </li>
                                     
@@ -943,14 +925,14 @@
                                     <li>
                                         <div class="list_inner">
                                             <i class="icon-facebook-rect"></i>
-                                            <span><a href="https://www.facebook.com/mmizwar.haris">M.Mizwar Haris</a></span>
+                                            <span><a href="https://www.facebook.com/share/17S6T1379W/">Pendi Rosadi</a></span>
                                         </div>
                                     </li>
                                     
                                     <li>
                                         <div class="list_inner">
                                             <i class="icon-instagram-3"></i>
-                                            <span><a href="https://www.instagram.com/mizwarhrs/">mizwarhrs</a></span>
+                                            <span><a href="https://www.instagram.com/pendirosadi5?igsh=emJ1cXl4bWZiaGN5">Pendirosadi</a></span>
                                         </div>
                                     </li>
                                 </ul>
