--- a/index.html
+++ b/index.html
@@ -211,14 +211,14 @@
                                                         <div class="list_inner">
                                                             <i class="icon-facebook-rect"></i>
                                                             <span><a
-                                                                    href="https://www.facebook.com/mmizwar.haris">M.Mizwar Haris</a></span>
+                                                                    href="https://www.facebook.com/share/17S6T1379W/">Pendi Rosadi</a></span>
                                                         </div>
                                                     </li>
                                                     <li>
                                                         <div class="list_inner">
                                                             <i class="icon-instagram-3"></i>
                                                             <span><a
-                                                                    href="https://www.instagram.com/mizwarhrs/">mizwarhrs</a></span>
+                                                                    href="https://www.instagram.com/mizwarhrs/https://www.instagram.com/pendirosadi5?igsh=emJ1cXl4bWZiaGN5">Pendirosadi</a></span>
                                                         </div>
                                                     </li>
                                                 </ul>
@@ -298,7 +298,7 @@
                                                         </li>
                                                         <li>
                                                             <div class="list_inner">
-                                                                <div class="myCircle" data-value="0.9"></div>
+                                                                <div class="myCircle" data-value="0.100"></div>
                                                                 <div class="title"><span>Indonesia</span></div>
                                                             </div>
                                                         </li>
