--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="edrea_tm_header">
             <div class="header_inner">
                 <div class="logo">
-                    <a href="#"><img src="img/logo/logo.png" alt="" /></a>
+                    <a href="#"><img src="img/logo/logo.PR.png" alt="" /></a>
                 </div>
                 <div class="menu">
                     <ul class="transition_link">
@@ -148,7 +148,7 @@
                         <div class="left">
                             <div class="image">
                                 <img src="img/thumbs/1-1.JPG" alt="" />
-                                <div class="main" data-img-url="img/about/foto.JPG"></div>
+                                <div class="main" data-img-url="img/about/pendifoto.jpg"></div>
                             </div>
                         </div>
                         <div class="right">
@@ -178,7 +178,7 @@
                                             <div class="author">
                                                 <div class="avatar_image">
                                                     <img src="img/thumbs/1-1.jpg" alt="" />
-                                                    <div class="main" data-img-url="img/about/1.jpg"></div>
+                                                    <div class="main" data-img-url="img/about/pendifoto.jpg"></div>
                                                 </div>
                                                 <div class="short">
                                                     <h3 class="name">Pendi <span class="coloring">Rosadi</span></h3>
