--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="edrea_tm_topbar">
             <div class="topbar_inner">
                 <div class="logo">
-                    <a href="#"><img src="img/logo/logo.PR.png" alt="" /></a>
+                    <a href="#"><img src="img/logo/logo.pendi.png" alt="" /></a>
                 </div>
                 <div class="trigger">
                     <div class="hamburger hamburger--slider">
@@ -103,7 +103,7 @@
         <div class="edrea_tm_header">
             <div class="header_inner">
                 <div class="logo">
-                    <a href="#"><img src="img/logo/logo.PR.png" alt="" /></a>
+                    <a href="#"><img src="img/logo/logo.pendi.png" alt="" /></a>
                 </div>
                 <div class="menu">
                     <ul class="transition_link">
